--- a/.github/workflows/activity.yml
+++ b/.github/workflows/activity.yml
@@ -1,16 +1,21 @@
-name: Update README with recent activity
+name: Update README with GitHub Activity
 
 on:
   schedule:
-    - cron: "0 * * * *"   # Runs every hour
-  workflow_dispatch:
+    - cron: "*/30 * * * *" # Runs every 30 minutes
+  workflow_dispatch: # Allow manual runs
+
+permissions:
+  contents: write
 
 jobs:
-  update-readme:
+  build:
     runs-on: ubuntu-latest
     steps:
-      - uses: actions/checkout@v3
-      - uses: Readme-Workflows/recent-activity@v2
-        with:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+      - name: Checkout repository
+        uses: actions/checkout@v2
 
+      - name: Update GitHub Activity
+        uses: readme-activity-stats/activity-readme@v1.7
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
