--- a/.github/workflows/activity.yml
+++ b/.github/workflows/activity.yml
@@ -3,19 +3,19 @@ name: Update README with GitHub Activity
 on:
   schedule:
     - cron: "*/30 * * * *" # Runs every 30 minutes
-  workflow_dispatch: # Allow manual runs
+  workflow_dispatch:
 
 permissions:
   contents: write
 
 jobs:
-  build:
+  update-readme:
     runs-on: ubuntu-latest
     steps:
-      - name: Checkout repository
-        uses: actions/checkout@v2
-
-      - name: Update GitHub Activity
-        uses: readme-activity-stats/activity-readme@v1.7
+      - uses: actions/checkout@v2
+      - uses: jamesgeorge007/github-activity-readme@master
+        with:
+          COMMIT_MSG: "⚡ Update README with recent activity"
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+
